<resources>
    <string name="app_name" translatable="false">You\'re Canceled</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_new_event">Add new event</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="event_image">Event image</string>
    <string name="attending">Attending</string>
    <string name="cancelled">Cancelled</string>
    <string name="event_details">Event Details</string>
    <string name="event_name_value_is_required_please_provide_a_valid_event_name">Event name value is required. Please provide a valid event name</string>
    <string name="event_name">Event name</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok" translatable="false">OK</string>
    <string name="event_date">Event date</string>
    <string name="event_date_value_is_required_please_provide_a_valid_event_date">Event date value is required. Please provide a valid event date</string>
    <string name="event_time_value_is_required_please_provide_a_valid_event_time">Event time value is required. Please provide a valid event time</string>
    <string name="event_time">Event time</string>
    <string name="home_screen">Home screen</string>
    <string name="profile_screen">Profile screen</string>
    <string name="friends_screen">Friends screen</string>
    <string name="go_back">Go back</string>
    <string name="cannot_add_event">Cannot add event</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_try_again">Please try again</string>
    <string name="retry">RETRY</string>
    <string name="sign_in">Sign in</string>
    <string name="give_credential_to_sign_in_your_account">Give credential to sign in your account</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_your_password">Type your password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="email_field_cannot_be_empty">Email field cannot be empty</string>
    <string name="the_email_address_format_is_invalid">The email address format is invalid</string>
    <string name="email_must_be_100_characters_or_fewer">Email must be 100 characters or fewer</string>
    <string name="password_field_cannot_be_empty">Password field cannot be empty</string>
    <string name="password_exceeds_the_allowed_length">Password exceeds the allowed length</string>
    <string name="failed_to_sign_in_please_check_your_credentials">Failed to sign in. Please check your credentials.</string>
    <string name="email_and_password_cannot_be_empty_please_fill_in_both_fields">Email and password cannot be empty. Please fill in both fields.</string>
</resources>